--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "coenjacobs/eloquent-composite-primary-keys",
+    "name": "mistery23/eloquent-composite-primary-keys",
     "description": "Offers composite primary keys on Eloquent models",
     "keywords":
     [
@@ -10,11 +10,15 @@
     ],
     "type": "library",
     "license": "MIT",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "authors": [
         {
             "name": "Coen Jacobs",
             "email": "coenjacobs@gmail.com"
+        },
+        {
+            "name": "Sviatoslav Bereznitskyi",
+            "email": "Bugatis15@gmail.com"
         }
     ],
     "minimum-stability": "dev",
@@ -24,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "CoenJacobs\\EloquentCompositePrimaryKeys\\": "src/"
+            "Mistery23\\EloquentCompositePrimaryKeys\\": "src/"
         }
     }
 }
